k8s/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jtoye-staging
  labels:
    name: jtoye-staging
    environment: staging
